# HeadsetControl-widget

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  continuos-release.yml
debian/: changelog  control  rules
headsetcontrol-tray/: Cargo.toml  headsetcontrol-tray.desktop  headsetcontrol-tray.service
headsetcontrol-tray/debian/: changelog  control  rules
headsetcontrol-tray/icons/: headset.argb
headsetcontrol-tray/src/: autostart.rs  battery_rate.rs  config.rs  headset_cli.rs  main.rs  notifications.rs  tray.rs
tests/: CMakeLists.txt  test_runner.cpp  test_widget_logic.cpp
widget/: CMakeLists.txt  headsetcontrol-widget.service  main.cpp  widget_logic.hpp
